improvement: Configurable SQL output type (#4437)
